--- a/calculator.html
+++ b/calculator.html
@@ -2,10 +2,16 @@
 <html>
 <head> 
 	<title>Calculator</title>
-	<meta charset="utf-8"> <script type="text/javascript"> function cube() {  
+	<meta charset="utf-8"> 
+	<script type="text/javascript"> 
+		function cube() {  
 	var num = document.getElementById("n1");
 	  num.value = Math.pow(num.value, 3); 
 	} 
+	function cuatro() {  
+	var num = document.getElementById("n1");
+	  num.value = Math.pow(num.value, 4); 
+	}
 	</script>
 	</head> 
 	<body>  
@@ -13,6 +19,9 @@
 		Number: <input type="text" id="n1">  
 		<p>    
 			<button onclick="cube()"> x^3 </button>  
+		</p>
+		<p>    
+			<button onclick="cuatro()"> x^4 </button>  
 		</p> 
 		</body> 
 		</html>
