--- a/calculator.html
+++ b/calculator.html
@@ -12,6 +12,10 @@
 	var num = document.getElementById("n1");
 	  num.value = Math.pow(num.value, 4); 
 	}
+	function seno() {  
+	var num = document.getElementById("n1");
+	  num.value = Math.sin(num.value); 
+	}
 	</script>
 	</head> 
 	<body>  
@@ -23,5 +27,8 @@
 		<p>    
 			<button onclick="cuatro()"> x^4 </button>  
 		</p> 
+		<p>    
+			<button onclick="seno()"> seno </button>  
+		</p>
 		</body> 
 		</html>
